# cognova

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.dev-tests/: README.md  conftest.py
.dev-tests/unit/: test_claude_provider.py  test_config.py  test_context_builder.py  test_dev_conftest.py  test_errors.py  test_fw_registry.py  test_loader.py  test_mcp_server.py  test_migrator.py  test_providers.py  test_registry.py  test_update_checker.py  test_validator.py
.github/workflows/: release.yml  test.yml
dev_tests/: README.md  conftest.py  validation.py
dev_tests/helpers/: fixtures.py
dev_tests/unit/: test_config.py
docs/: BACKLOG.md  FRAMEWORK_REGISTRY_GUIDE.md  IMPLEMENTATION_ROADMAP.md  MASTER_SPEC.md
docs/development/claude/: SKILL.md
docs/development/project_plan/: AITestKit_Complete_Specification.md  AITestKit_Project_Plan.md  AITestKit_Visual_Roadmap.md
src/aitestkit/: cli.py  config.py  mcp_server.py
src/aitestkit/context/: analyzer.py
src/aitestkit/generator/: edge_cases.py
src/aitestkit/healing/: __init__.py  healer.py
src/aitestkit/memory/: lancedb_store.py  retrieval.py
src/aitestkit/providers/: __init__.py  base.py  claude.py
src/aitestkit/regression/: regression.py
src/aitestkit/repair/: classifier.py  repairer.py
src/aitestkit/rules/: default_rules.json  engine.py  learner.py  validator.py
src/aitestkit/scenario/: loader.py
src/aitestkit/scenario/templates/: default.yaml
src/aitestkit/utils/: __init__.py  claude_client.py  cost_tracker.py  update_checker.py
src/cognova/: __init__.py  config.py  errors.py  mcp_server.py  queue.py  web_server.py
src/cognova/analyzer/: analyzer.py
src/cognova/context/: __init__.py  analyzer.py  graph.py  hasher.py  parser.py
src/cognova/feedback/: __init__.py  patterns.py  rejection_options.py  storage.py
src/cognova/frameworks/: __init__.py  base.py  registry.py
src/cognova/generator/: context_builder.py  fault_guided.py
src/cognova/healing/: auto_healer.py  healer.py
src/cognova/judge/: __init__.py  criteria.py  rubric.py  validator.py
src/cognova/memory/: __init__.py  embeddings.py  lancedb_store.py
src/cognova/prompts/templates/judge/: evaluate.md
src/cognova/providers/: __init__.py  base.py  claude.py  registry.py
src/cognova/repair/: __init__.py
src/cognova/rules/: __init__.py  default_rules.json  engine.py  learner.py
src/cognova/scenario/: __init__.py  loader.py  migrator.py  validator.py
src/cognova/scenario/templates/: default.yaml
src/cognova/utils/: __init__.py  cost_tracker.py  update_checker.py
